--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <log4j.version>2.5</log4j.version>
         <javassist.version>3.4.GA</javassist.version>
         <jackson.version>2.7.5</jackson.version>
+        <apache.tiles.version>3.0.7</apache.tiles.version>
     </properties>
 
     <dependencies>
@@ -211,22 +212,22 @@
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-core</artifactId>
-            <version>${apachetiles.version}</version>
+            <version>${apache.tiles.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-api</artifactId>
-            <version>${apachetiles.version}</version>
+            <version>${apache.tiles.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-servlet</artifactId>
-            <version>${apachetiles.version}</version>
+            <version>${apache.tiles.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
-            <version>${apachetiles.version}</version>
+            <version>${apache.tiles.version}</version>
         </dependency>
 
 
